Criado rotas em profissional usando url amigavel como parametro de busca
