# profissional/dtos/buscar-convenios.go
@@ -1,5 +1,0 @@
-package dtos
-
-type BuscarConveniosResponse struct {
-	Data []string `json:"data"`
-}
